// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolshot components/Explorer.tools.svelte: Multiple levels 1`] = `
<span>
  <nav>
    <ol />
  </nav>
   
  <ul>
    <li
      class="isCurrent"
    >
      <div>
        <span
          class="material-icons symbol"
        >
          architecture
        </span>
        Component #3
      </div>
       
    </li>
    <li
      class="isCurrent"
    >
      <div
        class="folder"
      >
        <span
          class="material-icons symbol"
        >
          folder_open
        </span>
        Folder A
      </div>
       
    </li>
    <li
      class="isCurrent"
    >
      <div
        class="folder"
      >
        <span
          class="material-icons symbol"
        >
          folder_open
        </span>
        Folder D
      </div>
       
    </li>
  </ul>
</span>
`;

exports[`Toolshot components/Explorer.tools.svelte: Single level 1`] = `
<span>
  <nav>
    <ol />
  </nav>
   
  <ul>
    <li
      class="isCurrent"
    >
      <div>
        <span
          class="material-icons symbol"
        >
          architecture
        </span>
        Component #1
      </div>
       
    </li>
    <li
      class="isCurrent"
    >
      <div>
        <span
          class="material-icons symbol"
        >
          architecture
        </span>
        Component #2
      </div>
       
    </li>
    <li
      class="isCurrent"
    >
      <div>
        <span
          class="material-icons symbol"
        >
          architecture
        </span>
        Component #3
      </div>
       
    </li>
  </ul>
</span>
`;
